--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ APP_POOL=blue
 RELEASE_ID_BLUE=blue-v1
 RELEASE_ID_GREEN=green-v1
 PORT=8080
+
+# alerting configurations
+SLACK_WEBHOOK_URL=
+ERROR_RATE_THRESHOLD=
+WINDOW_SIZE=
+ALERT_COOLDOWN_PERIOD=
